--- a/style.css
+++ b/style.css
@@ -14,7 +14,6 @@
     flex-direction: column;
 }
 .display {
-    border: 1px solid blue;
     height: 100px;
     margin: 20px;
     background-color: green;
@@ -27,6 +26,11 @@
     text-align: right;
     font-size: 40px;
     margin-bottom: 0;
+    margin-right: 5px;
+}
+.history {
+    text-align: right;
+    font-size: large;
     margin-right: 5px;
 }
 .button-container {
@@ -47,4 +51,12 @@ button {
 
 button:hover {
     background-color: #A7A4A4
+}
+
+.operator {
+    background-color: lightblue;
+}
+
+.clear {
+    background-color: palevioletred;
 }
